# ts2vec

./: .gitignore  datautils.py  main.py  pyproject.toml  train.py
notebooks/: forecasting.ipynb  sine_data.ipynb
